Fix spacing around header logo

--- a/src/static/assets/css/style.css
+++ b/src/static/assets/css/style.css
@@ -22,7 +22,8 @@
 }
 
 .wpcom-migration-header__blogvault-logo img {
-	margin-left: 8px;
+	margin-top: -5px;
+	margin-left: 6px;
 	height: 24px;
 }
 
